--- a/style.css
+++ b/style.css
@@ -221,6 +221,16 @@ button:hover {
   transform: translateX(-50%); /* Ensures the image is properly centered */
 }
 
+.container { max-width: 800px; 
+            margin: 0 auto; 
+            overflow: hidden; 
+            }  
+.responsive-image { max-width: 100%; 
+                   height: auto; 
+                   display: block;  
+                   margin: 0 auto; 
+                  }
+
 
 
 
