--- a/style.css
+++ b/style.css
@@ -215,10 +215,10 @@ button:hover {
   width: 600px;
   height: 600px;
   display: block;
-  position: relative; /* Changed from relative to absolute */
-  bottom: 0; /* Sticks the image to the bottom of the page */
-  left: 35%; /* Centers the image horizontally */
-  transform: translateX(-50%); /* Ensures the image is properly centered */
+  position: relative; 
+  bottom: 0; 
+  left: 35%; 
+  transform: translateX(-50%); 
 }
 
 .container { max-width: 800px; 
